Closed Bug 1083748 Opened 11 years ago Closed 11 years ago

incorrect inline-size used for line breaking within nested block frames

Categories

(Core :: Layout: Block and Inline, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla36

People

(Reporter: jfkthame, Assigned: smontagu)

References

(Blocks 1 open bug)

Details

Attachments

(3 files)

See attached testcase (with a vertical-enabled build). The size of the two red-bordered inner <div>s can be varied with the slider; the text within them is expected to re-wrap accordingly. In horizontal mode, all is well. When writing-mode is set to vertical, note how the right-hand <div>, which contains a <p> rather than simply containing the text directly, does not wrap correctly to its containing <div>; its line-breaking stays unchanged. Specifically, it looks like the <p> is wrapping its line *height* (inline-size) to the *width* of the green-bordered outer <div>, instead of to the height of its immediate container.
And here's the testcase I meant to attach.
Blocks: 1079125
No longer blocks: writing-mode
The second hunk is the one that fixes the bug, but while I was there I checked other callers of ComputeSize and found the one in the first hunk as well.
Assignee: nobody → smontagu
Attachment #8508086 - Flags: review?(jfkthame)
Comment on attachment 8508086 [details] [diff] [review] Patch: pass inline size, not width, to ComputeSize Review of attachment 8508086 [details] [diff] [review]: ----------------------------------------------------------------- LGTM, thanks!
Attachment #8508086 - Flags: review?(jfkthame) → review+
Attachment #8508935 - Flags: review?(jfkthame)
Attachment #8508935 - Flags: review?(jfkthame) → review+
Status: NEW → RESOLVED
Closed: 11 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Target Milestone: --- → mozilla36
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: