Bug 1083748. Pass inline-size, not width, to ComputeSize. r=jfkthame